# torch_is_lit

./: LISCENSE  README.md  file_index.py  pyproject.toml  tonic_validate_lit.py  ui.py
unstructured_ingest/: ingest.py  vectara_connector.py  vectara_writer.py
