[tool.poetry]
name = "torch-is-lit"
version = "0.1.0"
description = ""
authors = ["Rounak Sen <103501472+rony0000013@users.noreply.github.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.33.0"
llama-index = "^0.10.29"
llama-parse = "^0.4.1"
vectara = "^0.0.2"
llama-index-indices-managed-vectara = "^0.1.4"
together = "^1.1.1"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
